# Raskolnikov

./: .cursorrules  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix  opencode.json  spec-mvp.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: aur-release.yml  ci.yml  label.yml  release.yml  stale.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PHILOSOPHY.md  SECURITY.md  TOOLS.md  spec-mvp.md
docs/plan/: index.md  phase-4-tools.md  phase-6-session-logging.md  phase-8-polish-packaging.md
packaging/: PKGBUILD
plan/: phase-1-scaffold.md  phase-2-tui.md  phase-3-ai-providers.md  phase-5-agent-shell.md  phase-7-error-handling-security.md  phase-8-polish-packaging.md
src/: config.rs  lib.rs  main.rs  session.rs
src/agent/: SYSTEM_PROMPT.md  context.rs  mod.rs  prompt.rs  shell.rs
src/ai/: anthropic.rs  mod.rs  nous.rs  ollama.rs  openai.rs  openrouter.rs
src/session/: findings.rs  logger.rs  recover.rs  transcript.rs
src/tools/: executor.rs  gobuster.rs  mod.rs  nikto.rs  nmap.rs  sqlmap.rs
src/tui/: app.rs  input.rs  input_handler.rs  layout.rs  mod.rs  tool_handler.rs
